@@ -6,6 +6,7 @@ version ? (????-??-??):
   - added reload status on hosts list in Reload (alec)
   - BTS#0000582: fixed query in Net Edit (alec)
   - lmsd/parser: fixed T-Script's problem with big numbers (alec)
+  - lmsd/parser: support for multiple +, -, *, / operators in expression (alec)
 
 version 1.9.2 Thanos (2006-07-15):
   
